--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,8 +18,9 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-
+        java-version: '17' # Укажите нужную версию Java
+        distribution: 'temurin'
+        
     - name: Build with Maven
       run: mvn clean install
 
