--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
     - name: Run tests
       run: mvn test
-      working-directory: ./actions
+      working-directory: ./
 
   deploy:
     needs: test
